WTForms Changelog
=================

Version 0.5.1
-------------
Not yet released.

- Field._default is now Field.default.

- Minor bugfixes and cleanup in FieldList, Select(Multiple)Field,
  QuerySelectField to address behavioral consistency.


Version 0.5
-----------
Released February 13th, 2010.

- Added a BaseForm class which provides the core processing and validation
  functionality of Form without requiring declarative subclassing.

- Fields:
  * Field labels now default to a humanized field name.
  * Fields now have a `short_name` property which is the un-prefixed name.
  * DecimalField now rounds values for display without float coercion.
    See docs for details on how to format decimals.

- Extensions:
  * ext.sqlalchemy.fields now has an additional QuerySelectMultipleField, and
    all fields can now support multiple-column primary keys.
  * ext.sqlalchemy.orm contains tools for making forms from ORM models.
  * Added ext.dateutil for flexible date-time parsing.
  * Added ext.appengine contributed by Rodrigo Moraes.

- Added AnyOf and NoneOf validators.


Version 0.4
-----------
Released October 10th, 2009.

- Fields have much greater control over input processing. Filters have been
  added to implement a simple way to transform input data.

- Added fields that encapsulate advanced data structures such as dynamic lists
  or child forms for more powerful field composing.

- Fields now use widgets for rendering.

- All built-in validators have been converted to classes to clean up the code.

- `Form.auto_populate` and `Field.populate` were renamed to `populate_obj` to
  clarify that they populate another object, not the Form or Field. This is an
  API breaking change.

- Dropped support for Python 2.3.


Version 0.3.1
-------------
Released January 24th, 2009.

- Several fixes were made to the code and tests to make WTForms compatible
  with Python 2.3/2.4.

- Form's properties can now be accessed via dictionary-style access such as